使用get方法读取的文件

--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <title>hello</title>
-<form id="form" name="form" method="post" action="/cgi-bin/input.cgi">
+<form id="form" name="form" method="get" action="/cgi-bin/input.cgi">
 <p>
 <input type="text" name="BBB" id="input" value="input.c">
 </p>
